--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/editor/atto/plugins/morefontcolors"]
 	path = lib/editor/atto/plugins/morefontcolors
 	url = https://github.com/ndunand/moodle-atto_morefontcolors.git
+[submodule "blocks/completion_progress"]
+	path = blocks/completion_progress
+	url = https://github.com/deraadt/moodle-block_completion_progress.git
