--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "mod/zoom"]
 	path = mod/zoom
 	url = https://github.com/ucla/moodle-mod_zoom.git
+[submodule "blocks/quickmail"]
+	path = blocks/quickmail
+	url = https://github.com/ITRC/moodle-block_quickmail.git
